<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MeLotto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/MeLottoTitle"
        android:id="@+id/txt_title"
        android:textSize="64sp"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTicket"
        android:id="@+id/btn_addTicket"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btn_viewTickets"
        android:layout_alignEnd="@+id/btn_viewTickets" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewTickets"
        android:id="@+id/btn_viewTickets"
        android:layout_below="@+id/btn_addTicket"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calendar"
        android:id="@+id/btn_calendar"
        android:layout_below="@+id/btn_viewTickets"
        android:layout_alignEnd="@+id/btn_addTicket"
        android:layout_alignStart="@+id/btn_viewTickets" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Exit"
        android:id="@+id/btn_exit"
        android:layout_below="@+id/btn_calendar"
        android:layout_alignStart="@+id/btn_calendar"
        android:layout_alignEnd="@+id/btn_calendar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Welcome"
        android:id="@+id/txt_welcome"
        android:layout_below="@+id/txt_title"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
